<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_menu_home">

    <fragment
        android:id="@+id/nav_menu_home"
        android:name="com.mnestafrica.android.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_menu_profile"
        android:name="com.mnestafrica.android.fragments.MyProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_my_profile" />
    <fragment
        android:id="@+id/nav_menu_wallet"
        android:name="com.mnestafrica.android.fragments.wallet.WalletFragment"
        android:label="@string/menu_wallet"
        tools:layout="@layout/fragment_wallet" />
    <fragment
        android:id="@+id/nav_my_apartment"
        android:name="com.mnestafrica.android.fragments.myapartment.MyApartmentFragment"
        android:label="@string/my_apartment"
        tools:layout="@layout/fragment_my_apartment" />
    <fragment
        android:id="@+id/nav_current_apartment"
        android:name="com.mnestafrica.android.fragments.myapartment.CurrentApartmentFragment"
        android:label="@string/current_apartment"
        tools:layout="@layout/fragment_current_apartment" />
    <fragment
        android:id="@+id/nav_previous_apartments"
        android:name="com.mnestafrica.android.fragments.myapartment.PreviousApartmentsFragment"
        android:label="@string/previous_apartments"
        tools:layout="@layout/fragment_previous_apartments" />
    <fragment
        android:id="@+id/nav_view_open_unit"
        android:name="com.mnestafrica.android.fragments.myapartment.ViewOpenUnitFragment"
        android:label="@string/view_open_units"
        tools:layout="@layout/fragment_view_open_unit" />
    <fragment
        android:id="@+id/nav_pay_invoice"
        android:name="com.mnestafrica.android.fragments.wallet.PayInvoiceFragment"
        android:label="@string/pay_invoice"
        tools:layout="@layout/fragment_pay_invoice" />
    <fragment
        android:id="@+id/nav_pay_rent"
        android:name="com.mnestafrica.android.fragments.wallet.PayRentFragment"
        android:label="@string/pay_rent"
        tools:layout="@layout/fragment_pay_rent" />

</navigation>