<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_find_apartment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FindApartmentFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:titleEnabled="false">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:src="@drawable/ic_apartment"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/overlay_dark_40" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetStartWithNavigation="0dp"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </FrameLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-110dp"
        android:layout_marginBottom="@dimen/actionBarSize"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginTop="40dp"
                    android:background="@android:color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_xmedium">


                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/ic_apartment" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_large" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/find_apartment"
                            android:textAllCaps="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text=" Search for apartments here"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/find_Spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxlarge"
                android:layout_marginHorizontal="@dimen/spacing_middle"
                android:layout_marginVertical="@dimen/spacing_middle"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_large"
                android:paddingRight="@dimen/spacing_large"
                android:drawSelectorOnTop="true"
                app:hintText="Search apartment from list..."/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Details about the unit found here"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            app:fontFamily="sans-serif-medium" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_property_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/spacing_medium"
                            android:text="Property Type: "
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_building_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/spacing_medium"
                            android:text="Building Type: "
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_floor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/spacing_medium"
                            android:text="Floor Number: "
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Important to Know."
                            android:gravity="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            app:fontFamily="sans-serif-medium" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_rent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/spacing_medium"
                            android:text="Rent Amount: "
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_service_charge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/spacing_medium"
                            android:text="Service Charge: "
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_security_deposit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/spacing_medium"
                            android:text="Security Deposit: "
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_electricity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/spacing_medium"
                            android:text="Electricity Payment: "
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_water"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/spacing_medium"
                            android:text="Water Payment: "
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btn_cancel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_marginHorizontal="@dimen/spacing_large"
                                android:text="@string/cancel"
                                style="@style/Widget.MaterialComponents.Button.TextButton"/>

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btn_enquire"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_marginHorizontal="@dimen/spacing_middle"
                                android:text="@string/enquire"
                                android:textAlignment="center" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>